# From_BitBucket_UGV_course

./: .hgignore  README.md
customer_generators/: CMakeLists.txt  package.xml
customer_generators/launch/: customer_generators.launch
customer_generators/src/: customer_generator.cpp
customer_generators/yaml/: case_five.yaml  case_four.yaml  case_one.yaml  case_three.yaml  case_two.yaml
final_project/: CMakeLists.txt  package.xml
final_project/cfg/: customer_type.cfg
final_project/launch/: final_project_start.launch
final_project/rviz/: rviz_config.rviz
final_project/src/: customer.cpp  local_planner.cpp  odometry.cpp  way_point_manager.cpp
final_project/yaml/: costmap_params.yaml  global_planner_params.yaml  loaded_costmap_params.yaml  local_costmap_params.yaml  local_planner_params.yaml
hector_example/: CMakeLists.txt  package.xml
hector_example/launch/: hector_example.launch
hector_example/yaml/: amcl_params.yaml  hector_params.yaml  laser_filter_params.yaml
robot_sensors/: CMakeLists.txt
roundbot_control/: CMakeLists.txt  package.xml  roundbot_control_plugins.xml
roundbot_control/config/: roundbot_control.yaml
roundbot_control/include/roundbot_control/: DiffController.h  MotorSim.h  WheelSpeedController.h
roundbot_control/launch/: roundbot_control.launch
roundbot_control/roundbot_gazebo/: CMakeLists.txt  package.xml
roundbot_control/roundbot_gazebo/launch/: roundbot_robot.launch
roundbot_control/src/: DiffController.cpp  MotorSim.cpp  WheelSpeedController.cpp
roundbot_description/: CMakeLists.txt  package.xml
roundbot_description/urdf/: roundbot.urdf.xacro  roundbot_control.urdf  roundbot_friction.urdf  roundbot_sensors.urdf.xacro
state_space_example/: CMakeLists.txt  package.xml
state_space_example/src/: state_space_example.cpp
ugv_course_gazebo/models/building1/: model.sdf
ugv_course_gazebo/models/hexRoom/: model.config  model.sdf
ugv_course_gazebo/models/ramp_House_Building/: model.config  ramp_House_Building.sdf
ugv_course_gazebo/models/three_room_building_simple/: model.config  three_room_building_simple.sdf
ugv_course_gazebo/worlds/: aPuzzleWorld.world  a_three_room_building_world_simple.world  blank_with_building_world.world
ugv_course_launch/launch/: roundbot_final_project.launch  roundbot_nav_sim.launch  spawn_gazebo_robot.launch
