<?xml version="1.0"?>
<package>
  <name>customer_generators</name>
  <version>0.0.0</version>
  <description>The use to make situations package</description>
  <maintainer email="abc@todo.todo">abc</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>costmap_2d</build_depend>
  <build_depend>navfn</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>base_local_planner</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>interactive_markers</build_depend>
  
  <run_depend>costmap_2d</run_depend>
  <run_depend>navfn</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>base_local_planner</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>interactive_markers</run_depend>
  <export>
  </export>
</package>
