<?xml version="1.0"?>
<package>
  <name>hector_example</name>
  <version>0.0.0</version>
  <description>The hector_example package</description>
  <maintainer email="abc@todo.todo">abc</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <export>
  </export>
</package>
