<?xml version="1.0"?>
<package>
  <name>roundbot_control</name>
  <version>0.0.0</version>
  <description>The roundbot_control package</description>
  <maintainer email="micho@todo.todo">micho</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>roscpp</buildtool_depend>
  <build_depend>controller_interface</build_depend>
  <run_depend>controller_interface</run_depend>
  <run_depend>roscpp</run_depend>

  <export>
    <controller_interface plugin="${prefix}/roundbot_control_plugins.xml" />
  </export>
</package>
