<?xml version="1.0"?>
<package>
  <name>state_space_example</name>
  <version>0.0.0</version>
  <description>The state_space_example package</description>
  <maintainer email="student@todo.todo">student</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>visualization_msgs</run_depend>

  <export>
  </export>
</package>
